objects/Latest_Updates__c.object
<CustomObject>
    <fields>
        <fullName>Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Latest Updates</relationshipLabel>
        <relationshipName>Latest_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Latest Updates</relationshipLabel>
        <relationshipName>Latest_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <label>Update</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <label>Latest Updates</label>
    <nameField>
        <displayFormat>Record#-{00000}</displayFormat>
        <label>Latest Updates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Latest Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>